--- a/styles/myweb.css
+++ b/styles/myweb.css
@@ -22,6 +22,49 @@
   padding: 0.75rem 1.875rem;
 }
 
+.navbar .dropdown-toggle::after {
+  display: none;
+}
+
+.navbar-expand-lg .navbar-nav .dropdown-menu {
+  right: 0;
+  left: auto;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  margin-top: 1.25rem;
+  min-width: 210px;
+}
+
+.navbar ul.dropdown-menu {
+  border-radius: 1rem;
+  box-shadow: -8px 8px 58px 0px rgba(0, 0, 0, 0.1);
+}
+
+.navbar .dropdown-item {
+  transition: 0.2s;
+  padding: 0.5rem 1.25rem;
+}
+
+.navbar .dropdown-item:focus,
+.dropdown-item:hover {
+  color: #4d17e2;
+  text-decoration: underline;
+  background-color: transparent;
+}
+
+@media (min-width: 992px) {
+  /* Navbar */
+  .navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: 1.25rem;
+    padding-left: 1.25rem;
+  }
+
+  .navbar .vertical-line {
+    border: 1px solid rgba(231, 234, 245, 1);
+    height: 40px;
+  }
+}
+
 /* Header */
 .header .header-title {
   font-size: 2.625rem;
